# zero2prod

./: Cargo.toml  README.md
scripts/: docker-compose.yml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
