[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
reqwest = "0.12.12"
serde = { version = "1.0.209", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.12"